# rust-short-url

./: .env  Cargo.toml  README.md  Rocket.toml  index.html  main.db
migrations/2022-02-19-042403_url/: down.sql  up.sql
src/: main.rs  module.rs  routes.rs  schema.rs
