[package]
name = "short-url"
version = "0.1.0"
edition = "2021"
author = "Kkbt<snowandocean@qq.com>"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1",features = ["json"]}
diesel = "1.4.8"
base62 = "1.1.5"
rocket_cors = "0.5.2"


[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_sqlite_pool"]